--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjar</groupId>
+            <artifactId>font-awesome</artifactId>
+        </dependency>
+
     </dependencies>
 
 
