--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/blog
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&useSSL=true
     username: root
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
@@ -9,7 +9,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create
+
 server:
   port: 8080
-
 
